# FoxEdit

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: MathTypes.h  main.cpp  main.h
src/io/: Timing.cpp  Timing.h
src/rendering/: Renderer.cpp  Renderer.h
